# rbf_interpolation

./: CMakeLists.txt  README.md  package.xml
include/rbf_interpolation/: rbf_base.h  rbf_matrix_types.h  rbf_solver.h  rbf_solver_impl.h
include/rbf_interpolation/impl/: rbf_solver.hpp
include/rbf_interpolation/impl/rbf/: inverse_multiquadric_rbf.hpp  polyharmonic_rbf.hpp
include/rbf_interpolation/rbf_impl/: gaussian_rbf.h  inverse_multiquadric_rbf.h  multiquadric_rbf.h  polyharmonic_rbf.h  thin_plate_spline_rbf.h
src/: rbf.cpp  rbf_solver.cpp
test/: utest.cpp
