<?xml version="1.0"?>
<package format="2">
  <name>rbf_interpolation</name>
  <version>0.0.0</version>
  <description>The rbf_interpolation package</description>

  <maintainer email="mripperger@swri.org">mripperger</maintainer>
  <author email="mripperger@swri.org">mripperger</author>

  <license>LGPL 3.0</license>

  <buildtool_depend>catkin</buildtool_depend>
  <depend>roscpp</depend>

</package>
